--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             page_id="313536175653833"
             data-ref="index"
             color="blue"
-            size="standard">
+            size="xlarge">
         </div>
 
     </body>
