--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
         <title>EvacuMate</title>
     </head>
     <body>
+        <style>
+            h1 {
+                font-family: sans-serif;
+                text-align: center;
+                font-size: 60px;
+            }
+            .center {
+                display: block;
+                width: 25%;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 5%
+            }
+        </style>
+
+        <h1>EvacuMate</h1>
+
+        <a href="https://www.facebook.com/evacumate/"><img src="icon.png" class="center"></a>
+
         <script>
             window.fbAsyncInit = function() {
                 FB.init({
@@ -23,7 +42,7 @@
             }(document, 'script', 'facebook-jssdk'));
         </script>
 
-        <div class="fb-send-to-messenger"
+        <div class="fb-send-to-messenger center"
             messenger_app_id="1720375824892178"
             page_id="313536175653833"
             data-ref="index"
