--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 margin-right: auto;
                 margin-top: 5%
             }
+
+            .fb-send-to-messenger.fb_iframe_widget {
+                width: 180px;
+            }
         </style>
 
         <h1>EvacuMate</h1>
