--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <style>
             h1 {
-                font-family: sans-serif;
+                font-family: Arial;
                 text-align: center;
                 font-size: 60px;
             }
