--- a/map.html
+++ b/map.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="map"></div>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap&key=AIzaSyA5YWI2Y7rdVv13ZJK_-lNCetk6jJWGfXs">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap&key=AIzaSyA5YWI2Y7rdVv13ZJK_-lNCetk6jJWGfXs&libraries=visualization">
     </script>
   </body>
 </html>
