--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>EvacuMate</title>
     </head>
     <body>
+
+        <a href="https://github.com/ScriptSmith/EvacuMate"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
         <style>
             h1 {
                 font-family: sans-serif;
@@ -14,7 +16,7 @@
             }
             .center {
                 display: block;
-                width: 25%;
+                width: 15%;
                 margin-left: auto;
                 margin-right: auto;
                 margin-top: 5%
@@ -23,11 +25,23 @@
             .fb-send-to-messenger.fb_iframe_widget {
                 width: 180px;
             }
+            a {
+                text-decoration: none;
+                color: rgb(46, 50, 48);
+            }
+            p {
+                text-align: center;
+                width: 50%;
+                margin: auto;
+                font-size: 20px;
+            }
         </style>
 
-        <h1>EvacuMate</h1>
+        <a href="https://www.facebook.com/evacumate/">
+            <h1>EvacuMate</h1>
 
-        <a href="https://www.facebook.com/evacumate/"><img src="icon.png" class="center"></a>
+            <img src="icon.png" class="center">
+        </a>
 
         <script>
             window.fbAsyncInit = function() {
@@ -54,6 +68,8 @@
             color="blue"
             size="xlarge">
         </div>
+
+        <p>Unfortunately, I'm unable to give public access to EvacuMate because Facebook has a bot review policy that takes a number of days before they let you release bots into the wild. You can contact me @scriptsmith in the Slack, and I'm happy to add you to the list of people that can use it privately</p>
 
     </body>
 </html>
