testing map button css

--- a/map.html
+++ b/map.html
@@ -12,6 +12,6 @@
     <div id="map"></div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap&key=AIzaSyA5YWI2Y7rdVv13ZJK_-lNCetk6jJWGfXs&libraries=visualization">
     </script>
-    <button class="btn" onclick="toggleHeatmap()">Show flood-risk heatmap</button>
+    <button class="btn" onclick="toggleHeatmap()">Toggle flood-risk heatmap</button>
   </body>
 </html>
