--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
             }
             p {
                 text-align: center;
-                width: 50%;
+                width: 70%;
+                margin: auto;
+                font-size: 20px;
+                margin-top: 18px;
+                margin-bottom: 18px;
+            }
+            #smaller {
+                font-size: 15px;
+            }
+            ul {
+                width: 70%;
                 margin: auto;
                 font-size: 20px;
             }
@@ -69,7 +79,16 @@
             size="xlarge">
         </div>
 
-        <p>Unfortunately, I'm unable to give public access to EvacuMate because Facebook has a bot review policy that takes a number of days before they let you release bots into the wild. You can contact me @scriptsmith in the Slack, and I'm happy to add you to the list of people that can use it privately</p>
+        <br>
+        <p>EvacuMate is a friendly Facebook messenger bot, built on a platform that changes how we think about managing natural disasters</p>
+        <p><b>It does this by:</b></p>
+        <ul>
+            <li>Making community members aware of the possibility of a natural disaster and their responsibilities during an evacuation.</li>
+            <li>Helping disaster managers to better plan for and make smart choices during evacuations.</li>
+            <li>Giving the members of community informed options and the ability to establish a direct line of communication.</li>
+        </ul>
+        <br>
+        <p id="smaller">Unfortunately, I'm unable to give public access to EvacuMate because Facebook has a bot review policy that takes a number of days before bots are able to operate publicly. You can contact me @scriptsmith in the GovHack Slack, and I'm happy to add you to the list of people that can use it privately</p>
 
     </body>
 </html>
