--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <br>
-        <p>EvacuMate is a friendly Facebook messenger bot <a href="map.html">and map</a>, built on a platform that changes how we think about managing natural disasters</p>
+        <p>EvacuMate is a friendly Facebook messenger bot <a href="map.html" color="red">and map</a>, built on a platform that changes how we think about managing natural disasters</p>
         <p><b>It does this by:</b></p>
         <ul>
             <li>Making community members aware of the possibility of a natural disaster and their responsibilities during an evacuation.</li>
